--- a/frontend/src/components/Pagination/styles.css
+++ b/frontend/src/components/Pagination/styles.css
@@ -1,4 +1,4 @@
-dsmovie-pagination-container {
+.dsmovie-pagination-container {
     padding: 15px 0;
     display: flex;
     justify-content: center;
