--- a/frontend/src/components/Navbar/styles.css
+++ b/frontend/src/components/Navbar/styles.css
@@ -4,7 +4,9 @@ header{
     display: flex;
     align-items: center;
 }
-
+.dsmovie-link{
+    color: black;
+}
 .dsmovie-nav-content{
     display: flex;
     align-items: center;
