--- a/frontend/src/components/Navbar/styles.css
+++ b/frontend/src/components/Navbar/styles.css
@@ -5,7 +5,7 @@ header{
     align-items: center;
 }
 .dsmovie-link{
-    color: black;
+    color: #ffffff;
 }
 .dsmovie-nav-content{
     display: flex;
